Loco/src/main/java/CFG.txt
program: 
    | haiToken eolToken statement eolToken byeToken
	;

statement: 
    | expression eolToken statement 
    | assignment eolToken statement
    | flowcontrol eolToken statement
    | expression
    | assignment
    | flowcontrol
    ;

expression:
    | mathOp
    | comment
    | boolOp
    | cmpOp
    | concat
    | print
    | exptypecast
    ;
    
assignment:
	| vardec
	| varassign
	| scan
	| asntypecast
	;

flowcontrol:
	| ifblock
	| switchcase
	| loop
	;

varassign:
	| idToken rToken terminal
	;
	
asntypecast:
	| idToken isNowToken typeToken
	;
	
exptypecast:
	| maekToken idToken aToken typeToken
	| maekToken idToken typeToken
	;
	
mathOp: 
	| sumOpToken mathOp anToken mathOp
	| diffOpToken mathOp anToken mathOp
	| mulOpToken mathOp anToken mathOp
	| divOpToken mathOp anToken mathOp
	| minOpToken mathOp anToken mathOp
	| maxOpToken mathOp anToken mathOp
	| literal
	| idToken
	;

comment:
	| obtwToken statement tldrToken
	;
	
vardec: 
	| ihasToken idToken
	| ihasToken idToken itzToken literal
	| ihasToken idToken itzToken mathOp
	| ihasToken idToken itzToken idToken
	;
	
cmpOp:
	| bothSameOpToken boolOp AN boolOp
	| diffrntOpToken boolOp AN boolOp
	;


infArOp:
	| anyOpToken boolOp anToken boolOp
	| allOpToken boolOp antoken boolOp
	;
	
infArOperand:
	| infArOperand anToken infArOperand
	| boolOp
	| literal
	;
	
boolOp:
	| bothOpToken boolOp anToken boolOp
	| eitherOpToken boolOp anToken boolOp
	| wonOpToken boolOp anToken boolOp
	| notOpToken boolOp 
	| literal
	| idToken
	;

concat:
	| smooshToken mulliteral
	;
	
mulliteral: literal
	| literal AN mulliteral
	;
	
print:
	| printToken terminal
	;

scan:
	| scanToken idToken
	;
	
multerminal: terminal
	| multerminal multerminal
	;
	
terminal:
	| literal
	| mathOp
	| cmpOp
	| boolOp
	;
	
literal:
	| numbrToken
	| numbarToken
	| yarnLiteral
	| troofToken
	;
	
yarnLiteral:
	| quoteToken statement quoteToken
	;
	
	

	 	root
	/ 	  |   		\
HAI     line1           KTHXBYE



 		 root
    / 	  |   	    	\
HAI    statement       KTHXBYE
		/ 	  \
	line 2	statement
			/	   \
	   line 3     statement
                    /     \
                line  4   line 5
