Loco/src/main/java/backend/Parser.java
package backend;

import java.io.File;
import java.util.ArrayList;

import SyntaxNodes.*;

public class Parser {
	private ArrayList<Token> tokens;
	private ArrayList<Token> allTokens;
	private ArrayList<String> diagnostics;
	private int position;
	private int lineCounter;
	private boolean isNested;
	
	public Parser (File file) {
		this.tokens = new ArrayList<Token>();
		this.allTokens = new ArrayList<Token>();
		this.diagnostics = new ArrayList<String>();
		this.position = 0;
		this.lineCounter = 1;
		this.isNested = false;
		
		Lexer lexer = new Lexer(file);
		Token curToken;
		
		do {
			curToken = lexer.nextToken();
			
			// ignore single line comment
			if (curToken.getTokenKind() == TokenKind.btwToken) {
				while (curToken.getTokenKind() != TokenKind.eolToken && curToken.getTokenKind() != TokenKind.eofToken) {
					allTokens.add(curToken);
					curToken = lexer.nextToken();
				}
			}
			
			if (curToken.getTokenKind() != TokenKind.badToken) {
				allTokens.add(curToken);
				tokens.add(curToken);
			}
			
		} while (curToken.getTokenKind() != TokenKind.eofToken);
	}
	
	public Parser (String strFile) {
		this.tokens = new ArrayList<Token>();
		this.allTokens = new ArrayList<Token>();
		this.diagnostics = new ArrayList<String>();
		this.position = 0;
		this.lineCounter = 1;
		this.isNested = false;
		
		Lexer lexer = new Lexer(strFile);
		Token curToken;
		
		do {
			curToken = lexer.nextToken();
			
			// ignore single line comment
			if (curToken.getTokenKind() == TokenKind.btwToken) {
				while (curToken.getTokenKind() != TokenKind.eolToken && curToken.getTokenKind() != TokenKind.eofToken) {
					allTokens.add(curToken);
					curToken = lexer.nextToken();
				}
			}
			
			if (curToken.getTokenKind() != TokenKind.badToken) {
				allTokens.add(curToken);
				tokens.add(curToken);
			}
			
		} while (curToken.getTokenKind() != TokenKind.eofToken);
	}
	
	private Token peek(int offset) {
		if (position + offset >= tokens.size()) return tokens.get(tokens.size() - 1);
		
		return tokens.get(position + offset);
	}
	
	private Token current() {
		return peek(0);
	}
	
	private Token nextToken() {
		Token curToken = current();
		position++;
		return curToken;
	}
	
	private Token lazyMatch(TokenKind kind) {
		if (current().getTokenKind() == kind && kind == TokenKind.eolToken) {
			lineCounter++;

			return consumeEOL();
			
		} else if (current().getTokenKind() == kind) {
			if (kind == TokenKind.eolToken) lineCounter++;
			return nextToken();
		}
		
		return new Token(kind, null, current().getPosition() - 1);
	}
	
	private Token match(TokenKind kind) {
		if (current().getTokenKind() == kind && kind == TokenKind.eolToken) {
			lineCounter++;

			return consumeEOL();
			
		} else if (current().getTokenKind() == kind) {
			
			return nextToken();
		}
		
		diagnostics.add("Line "+ lineCounter + ": Unexpected <"+ current().getTokenKind() 
				+ "> expected <"+ kind + ">");
			
		if (current().getTokenKind() == TokenKind.miscToken ||
			current().getTokenKind() == TokenKind.badToken ||
			kind == TokenKind.eolToken ) {
			nextToken();
		}
		
		
		return new Token(kind, null, current().getPosition() - 1);
	}


	public NodeRoot parse() {
		NodeRoot root;
		
		lazyMatch(TokenKind.eolToken);
		Token start = match(TokenKind.haiToken);
		
		//	Version number
		lazyMatch(TokenKind.numbarToken);
		lazyMatch(TokenKind.numbrToken);
		
		match(TokenKind.eolToken);
		
		if (current().getTokenKind() != TokenKind.byeToken && current().getTokenKind() != TokenKind.eofToken) {
			SyntaxNode statement = parseStatement();
			Token end = match(TokenKind.byeToken);
			
			root = new NodeRoot (start, statement, end);
		} else {
			Token end = match(TokenKind.byeToken);
			root = new NodeRoot (start, end);
		}
		
		lazyMatch(TokenKind.eolToken);
		match(TokenKind.eofToken);
		
		return root;
	}
	
	private SyntaxNode parseStatement() {
		SyntaxNode expression;
		
		if (isAssignment()) expression = parseAssignment();
		else if (isFlowControl()) expression = parseFlowControl();
		else expression = parseExpression();
		
		match(TokenKind.eolToken);
		
		while (current().getTokenKind() != TokenKind.byeToken && 
			   current().getTokenKind() != TokenKind.eofToken &&
			   current().getTokenKind() != TokenKind.loopEndToken &&
			   current().getTokenKind().getType() != "switch" &&
			   current().getTokenKind().getType() != "ifblock") {
			expression = new NodeStatement(expression, parseStatement());
		}
		
		return expression;
	}
	
	
	private SyntaxNode parseExpression() {
		
		if (current().getTokenKind() == TokenKind.obtwToken) {
			return new NodeExpression(parseComment(), lineCounter);
			
		} else if (current().getTokenKind().getType() == "mathop") {
			return new NodeExpression(parseMathOp(), lineCounter);
			
		} else if (current().getTokenKind().getType() == "boolop") {
			return new NodeExpression(parseBoolOp(), lineCounter);
			
		} else if (current().getTokenKind().getType() == "infarop") {
			isNested = true;
			SyntaxNode infAr = new NodeExpression(parseInfArOp(nextToken()), lineCounter);
			isNested = false;
			
			match(TokenKind.mkayToken);
			return infAr;
			
		} else if (current().getTokenKind().getType() == "cmpop") {
			return new NodeExpression(parseCmpOp(), lineCounter);
			
		}	else if (current().getTokenKind() == TokenKind.maekToken) {
			return new NodeExpression(parseExpTypecast(), lineCounter);
				
		} else if (current().getTokenKind() == TokenKind.smooshToken) {
			SyntaxNode concat = new NodeExpression(parseConcat(nextToken()), lineCounter);
			lazyMatch(TokenKind.mkayToken);
			return concat;
			
		} else if (current().getTokenKind() == TokenKind.printToken) {
			return new NodeExpression(parsePrint(nextToken()), lineCounter);
			
		} else if  (current().getTokenKind() == TokenKind.breakToken) {
			return new NodeLiteral(SyntaxType.gtfo, nextToken());
		}
		
		diagnostics.add("Line "+ lineCounter + ": Invalid Keyword ");
		while (current().getTokenKind() != TokenKind.eolToken) {
			nextToken();
		}
		return new NodeLiteral(new Token(TokenKind.badToken, null, -1));
	}
	
	private SyntaxNode parseAssignment() {
		if (current().getTokenKind() == TokenKind.ihasToken) {
			return new NodeAssignment(parseDeclaration(), lineCounter);
			
		} else if (current().getTokenKind() == TokenKind.idToken && !current().getValue().equals("IT")) {
			Token varid = nextToken();
			
			if (current().getTokenKind() == TokenKind.rToken) {
				return new NodeAssignment(parseVarChange(varid), lineCounter);
						
			} else if (current().getTokenKind() == TokenKind.isNowToken) {
				return new NodeAssignment(parseAsnTypecast(varid), lineCounter);
			}
		} else if (current().getTokenKind() == TokenKind.scanToken) {
			return new NodeAssignment(parseScan(), lineCounter);
		}
		
		diagnostics.add("Line "+ lineCounter + ": Invalid Keyword");
		while (current().getTokenKind() != TokenKind.eolToken) {
			nextToken();
		}
		return new NodeLiteral(new Token(TokenKind.badToken, null, -1));
	}
	
	private SyntaxNode parseFlowControl() {
		if (current().getTokenKind() == TokenKind.ifStartToken) {
			return new NodeFlowControl(parseIfBlock(), lineCounter);
			
		} else if (current().getTokenKind() == TokenKind.switchToken) {
			return new NodeFlowControl(parseSwitchCase(), lineCounter);
			
		} else if (current().getTokenKind() == TokenKind.loopStartToken) {
			return new NodeFlowControl(parseLoop(), lineCounter);
			
		}
		
		diagnostics.add("Line "+ lineCounter + ": Invalid Keyword");
		while (current().getTokenKind() != TokenKind.eolToken) {
			nextToken();
		}
		return new NodeLiteral(new Token(TokenKind.badToken, null, -1));
	}
	
	private SyntaxNode parseComment() {
		ArrayList<Token> inner = new ArrayList<Token>();
		Token start = nextToken();
		int counter = 0;
		
		while (current().getTokenKind() != TokenKind.tldrToken && current().getTokenKind() != TokenKind.byeToken) {
			if (current().getValue() == "\n") {
				counter++;
				lineCounter++;
			}
			inner.add(nextToken());
		}
		Token end = match(TokenKind.tldrToken);
		
		if (counter < 2) diagnostics.add("Line "+ lineCounter + ": Invalid comment structure");
		
		return new NodeComment(start, inner, end);
	}
	
	/*
	 ========================
	 
	 	EXPRESSION
	 
	 ========================
	*/
	
	private SyntaxNode parseMathOp() {
		Token operation = nextToken();
		
		SyntaxNode operand1 = parseTerminal();
		match(TokenKind.anToken);
		SyntaxNode operand2 = parseTerminal();
		
		return new NodeOperation(SyntaxType.mathop, operation, operand1, operand2);
		
	}
	
	private SyntaxNode parseBoolOp() {
		Token operation = nextToken();
		
		if (operation.getTokenKind() != TokenKind.notOpToken) {
			SyntaxNode operand1 = parseTerminal();
			match(TokenKind.anToken);
			SyntaxNode operand2 = parseTerminal();
			
			return new NodeOperation(SyntaxType.boolop, operation, operand1, operand2);
		} else {
			SyntaxNode operand1 = parseTerminal();
			
			return new NodeOperation(SyntaxType.boolop, operation, operand1);
		}
	}
	
	private SyntaxNode parseInfArOp(Token operation) {		
		SyntaxNode operand1 = parseTerminal();
		
		if (current().getTokenKind() != TokenKind.eolToken && current().getTokenKind() != TokenKind.mkayToken) {
			match(TokenKind.anToken);
			operand1 = new NodeOperation(SyntaxType.infarop , operation, operand1, parseInfArOp(operation));
		} else {
			operand1 = new NodeOperation(SyntaxType.infarop, operation, operand1);
		}
		
		return operand1;
	}
	
	private SyntaxNode parseCmpOp() {
		Token operation = nextToken();
		
		SyntaxNode operand1 = parseTerminal();
		match(TokenKind.anToken);
		SyntaxNode operand2 = parseTerminal();
		
		return new NodeOperation(SyntaxType.cmpop, operation, operand1, operand2);
	}
	
	private SyntaxNode parseConcat(Token operation) {
		SyntaxNode operand1 = parseTerminal();
		
		if (current().getTokenKind() != TokenKind.eolToken && current().getTokenKind() != TokenKind.mkayToken) {
			match(TokenKind.anToken);
			operand1 = new NodeOperation(SyntaxType.concat, operation, operand1, parseConcat(operation));
			
		} else {
			operand1 = new NodeOperation(SyntaxType.concat, operation, operand1);
		}
		
		return operand1;
	}
	
	private SyntaxNode parsePrint(Token operation) {
		SyntaxNode operand1 = new NodeLiteral(new Token(TokenKind.badToken, "", -1));
		
		if (current().getTokenKind() == TokenKind.exclamationToken) {
			return new NodeOperation(SyntaxType.print, operation, new NodeLiteral(nextToken()));
		} else {
			operand1 = parseTerminal();
		}
		
		
		if (current().getTokenKind() != TokenKind.eolToken && operand1.getType() != SyntaxType.invalid) {
			operand1 = new NodeOperation(SyntaxType.print, operation, operand1, parsePrint(operation));

		} else if (operand1.getType() == SyntaxType.invalid) {
			nextToken();
			operand1 = new NodeOperation(SyntaxType.print, operation, operand1);

		} else {
			
			operand1 = new NodeOperation(SyntaxType.print, operation, operand1);
		}
		
		return operand1;
	}
	
	private SyntaxNode parseExpTypecast() {
		Token operation = nextToken();
		
		
		if (current().getTokenKind() == TokenKind.idToken && !current().getValue().equals("IT")) {
			Token varid = nextToken();
			
			lazyMatch(TokenKind.aToken);
			
			SyntaxNode vartype = new NodeLiteral(SyntaxType.vartype, match(TokenKind.typeToken));
			
			return new NodeDeclaration(SyntaxType.vartypechange, operation, varid, vartype);
		}
		
		SyntaxNode expression = parseTerminal();
		lazyMatch(TokenKind.aToken);
		SyntaxNode vartype = new NodeLiteral(SyntaxType.vartype, match(TokenKind.typeToken));
		
		return new NodeOperation(SyntaxType.vartypechange, operation, expression, vartype);
	}
	
	/*
	 ========================
	 
	 	ASSIGNMENT
	 
	 ========================
	*/
	
	private SyntaxNode parseDeclaration() {
		Token operation = nextToken();
		Token varid = match(TokenKind.idToken);
		
		if (varid.getValue().equals("IT")) {
			diagnostics.add("Line "+ lineCounter + ": Invalid operand; expected valid Literal/VarId/Expression");
		}
		
		if (current().getTokenKind() == TokenKind.itzToken) {
			nextToken();
			
			return new NodeDeclaration(SyntaxType.newvar, operation, varid, parseTerminal());			
		}
		
		return new NodeDeclaration(SyntaxType.newvar, operation, varid);

	}

	private SyntaxNode parseVarChange(Token varid) {
		Token operation = nextToken();
		
		SyntaxNode terminal = parseTerminal();
		
		return new NodeDeclaration(SyntaxType.varchange, operation, varid, terminal);
	}
	
	private SyntaxNode parseAsnTypecast(Token varid) {
		Token operation = nextToken();
		SyntaxNode vartype = new NodeLiteral(SyntaxType.vartype, match(TokenKind.typeToken));
		
		return new NodeDeclaration(SyntaxType.vartypechange, operation, varid, vartype);
	}
	
	private SyntaxNode parseScan() {
		Token operation = nextToken();
		Token varid = match(TokenKind.idToken);
		
		if (varid.getValue().equals("IT")) {
			diagnostics.add("Line "+ lineCounter + ": Invalid operand; expected valid Literal/VarId/Expression");
		}
		
		return new NodeDeclaration(SyntaxType.scan, operation, varid);
	}
	
	/*
	 ========================
	 
	 	FLOW CONTROL
	 
	 ========================
	*/
	
	private SyntaxNode parseIfBlock() {
		ArrayList<SyntaxNode> statements = new ArrayList<SyntaxNode>();
		ArrayList<SyntaxNode> ifConditions = new ArrayList<SyntaxNode>();
		Token operation = nextToken();
		
		match(TokenKind.eolToken);
		match(TokenKind.ifBlockToken);
		match(TokenKind.eolToken);
		
		statements.add(parseStatement());
		
		while (current().getTokenKind() == TokenKind.elifBlockToken) {
			match(TokenKind.elifBlockToken);
			ifConditions.add(parseTerminal());
			match(TokenKind.eolToken);
			statements.add(parseStatement());
		}

		if (current().getTokenKind() == TokenKind.elseBlockToken) {
			
			ifConditions.add(new NodeLiteral(nextToken()));
			match(TokenKind.eolToken);
			
			statements.add(parseStatement());
		}
		
		
		match(TokenKind.ifEndToken);
		
		return new NodeMultiLine(SyntaxType.ifblock, operation, ifConditions, statements);
	}
	
	private SyntaxNode parseSwitchCase() {
		ArrayList<SyntaxNode> statements = new ArrayList<SyntaxNode>();
		ArrayList<SyntaxNode> switchLiterals = new ArrayList<SyntaxNode>();
		Token operation = nextToken();
		match(TokenKind.eolToken);
		
		do {
			
			match(TokenKind.caseToken);
			switchLiterals.add(parseLiteral());
			match(TokenKind.eolToken);
			
			statements.add(parseStatement());
			
		} while (current().getTokenKind() != TokenKind.ifEndToken && current().getTokenKind() != TokenKind.defaultToken);
		
		if (current().getTokenKind() == TokenKind.defaultToken) {
			switchLiterals.add(new NodeLiteral(nextToken()));
			match(TokenKind.eolToken);
			
			statements.add(parseStatement());
		}
		
		match(TokenKind.ifEndToken);
		
		return new NodeMultiLine(SyntaxType.switchcase, operation, switchLiterals, statements);
	}
	
	private SyntaxNode parseLoop() {
		ArrayList<SyntaxNode> statements = new ArrayList<SyntaxNode>();
		Token operation = nextToken();
		Token loopid = match(TokenKind.idToken);
		Token optype;
		SyntaxNode condition;
		
		if (loopid.getValue().equals("IT")) {
			diagnostics.add("Line "+ lineCounter + ": Invalid operand; expected valid Literal/VarId/Expression");
		}
		
		if (current().getTokenKind() == TokenKind.incToken || current().getTokenKind() == TokenKind.decToken) {
			optype = nextToken();
		} else {
			diagnostics.add("Line "+ lineCounter + ": Unexpected <"+ current().getTokenKind() 
					+ "> expected <incToken>/<decToken>");
			optype = new Token(TokenKind.incToken, "UPPIN", -1);
		}
		
		match(TokenKind.yrToken);
		Token varid = match(TokenKind.idToken);
		
		if (varid.getValue().equals("IT")) {
			diagnostics.add("Line "+ lineCounter + ": Invalid operand; expected valid Literal/VarId/Expression");
		}
		
		
		if (current().getTokenKind() == TokenKind.tilToken || current().getTokenKind() == TokenKind.wileToken) {
			if (peek(1).getTokenKind().getType() != "cmpop") {
				diagnostics.add("Line "+ lineCounter + ": Unexpected <"+ peek(1).getTokenKind().getType() 
						+ "> expected comparison operator <cmpop>");
			}
			condition = new NodeDeclaration(SyntaxType.loopcond, nextToken(), varid, parseCmpOp());
		} else {
			/*
			diagnostics.add("Line "+ lineCounter + ": Unexpected <"+ current().getTokenKind() 
					+ "> expected <tilToken>/<wileToken>");
			Token tempToken = new Token(TokenKind.tilToken, "TIL", -1);
			condition = new NodeDeclaration(SyntaxType.loopcond, tempToken, varid, parseCmpOp());
			*/
			Token tempToken = new Token(TokenKind.troofToken, "WIN", -1);
			condition = new NodeDeclaration(SyntaxType.loopcond, tempToken, varid);
		}
		
		match(TokenKind.eolToken);
		
		statements.add(parseStatement());
		
		match(TokenKind.loopEndToken);
		
		if (!loopid.getValue().equals(current().getValue())) {
			diagnostics.add("Line "+ lineCounter + ": Loop id mismatch");
			
		} 
		
		nextToken();
		
		return new NodeMultiLine(operation, loopid, optype, condition, statements);
	}
	
	
	
	
	
	private SyntaxNode parseTerminal() {
		if (current().getTokenKind().getType() == "mathop") {
			return parseMathOp();
		} else if (current().getTokenKind().getType() == "boolop") {
			return parseBoolOp();
		} else if (current().getTokenKind().getType() == "cmpop") {
			return parseCmpOp();
		} else if (current().getTokenKind() == TokenKind.quoteToken) {
			return new NodeLiteral(parseYarn());
		} else if (current().getTokenKind().getType() == "literal") {
			return new NodeLiteral(nextToken());
		} else if (current().getTokenKind() == TokenKind.idToken && !current().getValue().equals("IT")) {
			return new NodeLiteral(SyntaxType.varid, nextToken());
		} else if (current().getTokenKind() == TokenKind.maekToken) {
			return parseExpTypecast();
		} else if (current().getTokenKind().getType() == "infarop" && !isNested) {
			isNested = true;
			SyntaxNode infAr = parseInfArOp(nextToken());
			isNested = false;
		
			match(TokenKind.mkayToken);
			return infAr;
		}
		
		if (isNested) nextToken();
		diagnostics.add("Line "+ lineCounter + ": Invalid operand; expected valid Literal/VarId/Expression");
		return new NodeLiteral(SyntaxType.invalid, new Token(TokenKind.badToken, null, -1));
	}
	
	private NodeLiteral parseLiteral() {
		if (current().getTokenKind() == TokenKind.quoteToken) {
			return new NodeLiteral(parseYarn());
		} else if (current().getTokenKind().getType() == "literal") {
			return new NodeLiteral(nextToken());
		}
		
		diagnostics.add("Line "+ lineCounter + ": Invalid operand; expected valid NUMBR/NUMBAR/YARN/TROOF");
		return new NodeLiteral(SyntaxType.invalid, new Token(TokenKind.badToken, null, -1));
	}
	
	private Token parseYarn() {
		String value = new String();
		nextToken();
		
		while (current().getTokenKind() != TokenKind.quoteToken && current().getTokenKind() != TokenKind.eolToken) {
			
			if (current().getValue().equals(":")) nextToken();
			else if (current().getValue().equals(":\"")) {
				value += "\"";
				nextToken();
				
			} 
			else value += nextToken().getValue();
		}
		
		match(TokenKind.quoteToken);

		return new Token(TokenKind.yarnToken, value, current().getPosition());
	}
	
	
	
	private Token consumeEOL() {
		Token token = nextToken();
		
		while (current().getTokenKind() == TokenKind.eolToken) {
			lineCounter++;
			token = nextToken();
		}
		
		return token;
	}

	private void omitPreamble() {
		boolean insideComment = false;
		
		while (current().getTokenKind() != TokenKind.haiToken && current().getTokenKind() != TokenKind.eofToken) {			
			
			if (current().getTokenKind() != TokenKind.obtwToken &&
				current().getTokenKind() != TokenKind.tldrToken &&
				current().getTokenKind() != TokenKind.eolToken &&
				!insideComment) {
				diagnostics.add("Line "+ lineCounter + ": Unexpected <"+ current().getTokenKind() 
						+ "> before <haiToken>");
			}
			
			if (current().getTokenKind() == TokenKind.obtwToken) insideComment = true;
			else if (current().getTokenKind() == TokenKind.tldrToken) insideComment = false;
			else if (current().getTokenKind() == TokenKind.eolToken) lineCounter++;
			
			nextToken();
		}	
	}
	
	private boolean isAssignment() {
		if (current().getTokenKind() == TokenKind.ihasToken ||
			current().getTokenKind() == TokenKind.idToken ||
			current().getTokenKind() == TokenKind.scanToken) {
			return true;
		}
		
		return false;
	}
	
	private boolean isFlowControl() {
		if (current().getTokenKind() == TokenKind.ifStartToken ||
			current().getTokenKind() == TokenKind.switchToken ||
			current().getTokenKind() == TokenKind.loopStartToken) {
			return true;
		}
		
		return false;
	}
	
	protected ArrayList<Token> getTokens() {
		return allTokens;
	}
	
	protected ArrayList<Token> getParserTokens() {
		return tokens;
	}
	
	protected ArrayList<String> getDiagnostics() {
		return diagnostics;
	}
	
	public void viewTokens() {
		for (Token i : tokens) i.viewToken();
	}
	
	public void viewErrors() {
		for (String i : diagnostics) System.out.println(i);
	}
}
